Remove notebook handle

--- a/day_three/galaxy_sizes.ipynb
+++ b/day_three/galaxy_sizes.ipynb
@@ -268,7 +268,7 @@
    "cell_type": "code",
    "source": [
     "# Display the plot\n",
-    "show(p, notebook_handle=True)\n",
+    "show(p)\n",
     "\n",
     "# Angular size widget\n",
     "angular_size_widget = w.FloatText(disabled=True)\n",
