--- a/day_three/galaxy_sizes.ipynb
+++ b/day_three/galaxy_sizes.ipynb
@@ -26,7 +26,7 @@
    "cell_type": "code",
    "source": [
     "%%capture\n",
-    "!pip install astroquery photutils"
+    "!pip install astroquery bokeh ipywidgets"
    ],
    "id": "b724b07da444377d",
    "outputs": [],
