Include day four material

--- a/day_three/velocity_measure.ipynb
+++ b/day_three/velocity_measure.ipynb
@@ -262,9 +262,10 @@
    },
    "cell_type": "code",
    "source": [
-    "oii_observed_wavelength = 5236  # Wavelength of the OIII emission line\n",
+    "observed_wavelength = 5236  # Wavelength of the measured emission line\n",
+    "rest_wavelength = 5007  # Rest wavelength of the emission line\n",
     "\n",
-    "redshift = (oii_observed_wavelength - oiii_rest_wavelength) / oiii_rest_wavelength\n",
+    "redshift = (observed_wavelength - rest_wavelength) / rest_wavelength\n",
     "\n",
     "print(f\"Redshift of the OIII emission line: {redshift:.4f}\")"
    ],
