Fix the intercept in fitting

--- a/day_five/expansion_rate.ipynb
+++ b/day_five/expansion_rate.ipynb
@@ -275,7 +275,7 @@
     "distance_data = measurement_data['Distance (Mpc)']\n",
     "velocity_data = measurement_data['Velocity (km/s)']\n",
     "\n",
-    "model = Linear1D(slope=60, intercept=0)\n",
+    "model = Linear1D(slope=60, intercept=0, fixed={'intercept': True})\n",
     "fitted_model = LinearLSQFitter()(model, distance_data, velocity_data)"
    ],
    "id": "489d84f55050f544",
